Updated HTTPS for local dev
